--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,14 +41,17 @@
             android:layout_height="0dp"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
-            app:strokeColor="#00000000">
+            app:strokeColor="#1e1e1e"
+            app:strokeWidth="2dp">
 
-            <ImageView
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/nav_host_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="@string/app_name"
-                android:scaleType="centerCrop"
-                android:src="@drawable/wallpaper" />
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/nav_graph" />
+
         </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
@@ -72,26 +75,29 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/btn_option"
                         android:layout_width="wrap_content"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="3dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_option" />
+                        android:background="@drawable/ic_btn_option"
+                        android:contentDescription="@string/todo"/>
 
                     <ImageView
+                        android:id="@+id/btn_call"
                         android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_call" />
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_btn_call"
+                        android:contentDescription="@string/todo"/>
                 </LinearLayout>
 
-
                 <ImageView
+                    android:id="@+id/btn_navigation"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.1"
                     android:scaleType="centerInside"
-                    android:src="@drawable/ic_btn_navigation" />
+                    android:src="@drawable/ic_btn_navigation"
+                    android:contentDescription="@string/todo"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -101,17 +107,19 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/btn_cancel"
                         android:layout_width="wrap_content"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="3dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_back" />
+                        android:background="@drawable/ic_btn_back"
+                        android:contentDescription="@string/todo" />
 
                     <ImageView
+                        android:id="@+id/btn_exit"
                         android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_exit" />
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_btn_exit"
+                        android:contentDescription="@string/todo" />
 
                 </LinearLayout>
 
