--- a/app/src/main/res/drawable/ic_btn_0.xml
+++ b/app/src/main/res/drawable/ic_btn_0.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="71dp"
-    android:height="33dp"
+    android:width="@dimen/_71sdp"
+    android:height="@dimen/_33sdp"
     android:viewportWidth="71"
     android:viewportHeight="33">
   <path
