--- a/app/src/main/res/drawable/ic_btn_1.xml
+++ b/app/src/main/res/drawable/ic_btn_1.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="70dp"
-    android:height="38dp"
+    android:width="@dimen/_70sdp"
+    android:height="@dimen/_38sdp"
     android:viewportWidth="70"
     android:viewportHeight="38">
   <path
