--- a/app/src/main/res/drawable/ic_btn_8.xml
+++ b/app/src/main/res/drawable/ic_btn_8.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="71dp"
-    android:height="35dp"
+    android:width="@dimen/_70sdp"
+    android:height="@dimen/_35sdp"
     android:viewportWidth="71"
     android:viewportHeight="35">
   <path
