--- a/app/src/main/res/drawable/ic_btn_call.xml
+++ b/app/src/main/res/drawable/ic_btn_call.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="100dp"
-    android:height="45dp"
+    android:width="@dimen/_100sdp"
+    android:height="@dimen/_45sdp"
     android:viewportWidth="100"
     android:viewportHeight="45">
   <path
