--- a/app/src/main/res/drawable/ic_btn_exit.xml
+++ b/app/src/main/res/drawable/ic_btn_exit.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="104dp"
-    android:height="46dp"
+    android:width="@dimen/_100sdp"
+    android:height="@dimen/_45sdp"
     android:viewportWidth="104"
     android:viewportHeight="46">
   <path
