--- a/app/src/main/res/drawable/ic_btn_menu.xml
+++ b/app/src/main/res/drawable/ic_btn_menu.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="31dp"
-    android:height="77dp"
+    android:width="@dimen/_30sdp"
+    android:height="@dimen/_75sdp"
     android:viewportWidth="31"
     android:viewportHeight="77">
   <path
