--- a/app/src/main/res/drawable/ic_btn_navigation.xml
+++ b/app/src/main/res/drawable/ic_btn_navigation.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="101dp"
-    android:height="97dp"
+    android:width="@dimen/_100sdp"
+    android:height="@dimen/_100sdp"
     android:viewportWidth="101"
     android:viewportHeight="97">
   <path
