--- a/app/src/main/res/drawable/ic_btn_network.xml
+++ b/app/src/main/res/drawable/ic_btn_network.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="29dp"
-    android:height="76dp"
+    android:width="@dimen/_30sdp"
+    android:height="@dimen/_75sdp"
     android:viewportWidth="29"
     android:viewportHeight="76">
   <path
