--- a/app/src/main/res/drawable/ic_btn_option.xml
+++ b/app/src/main/res/drawable/ic_btn_option.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="96dp"
-    android:height="44dp"
+    android:width="@dimen/_100sdp"
+    android:height="@dimen/_45sdp"
     android:viewportWidth="96"
     android:viewportHeight="44">
   <path
