--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,37 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="@dimen/_220sdp"
+    android:layout_height="@dimen/_240sdp"
     android:background="@drawable/wallpaper">
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.000">
 
         <!-- Battery and Network Strength Icons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/_5sdp"
             android:background="#20000000"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingHorizontal="@dimen/_15sdp"
+            android:paddingVertical="@dimen/_5sdp">
 
             <TextClock
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
+                android:format12Hour="hh:mm a"
                 android:gravity="center"
-                android:format12Hour="hh:mm a" />
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/_18sdp" />
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <ImageView
                 android:id="@+id/networkIcon"
@@ -41,21 +49,21 @@
 
             <Space
                 android:layout_width="10dp"
-                android:layout_height="0dp"/>
+                android:layout_height="0dp" />
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_battery_100" />
 
-<!--            <iam.thevoid.batteryview.BatteryView-->
-<!--                android:id="@+id/battery_view"-->
-<!--                android:layout_width="24dp"-->
-<!--                android:layout_height="20dp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:bv_borderColor="@android:color/white"-->
-<!--                app:bv_infillColor="@android:color/white"-->
-<!--                app:bv_percent="50"/>-->
+            <!--            <iam.thevoid.batteryview.BatteryView-->
+            <!--                android:id="@+id/battery_view"-->
+            <!--                android:layout_width="24dp"-->
+            <!--                android:layout_height="20dp"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                app:bv_borderColor="@android:color/white"-->
+            <!--                app:bv_infillColor="@android:color/white"-->
+            <!--                app:bv_percent="50"/>-->
 
         </LinearLayout>
 
@@ -64,68 +72,67 @@
             android:id="@+id/timeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="48sp"
-            android:textColor="#FFFFFF"
-            android:layout_marginTop="40dp"
-            android:gravity="center"
+            android:layout_marginTop="@dimen/_30sdp"
             android:format12Hour="hh:mm"
-            android:format24Hour="HH:mm:ss" />
+            android:format24Hour="HH:mm:ss"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/_48sdp" />
 
         <!-- Date Display -->
         <TextView
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2022-06-15 周三"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
             android:layout_marginTop="8dp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="2022-06-15 周三"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/_20sdp" />
 
         <!-- Temperature Display -->
         <TextView
             android:id="@+id/temperatureTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="24~28°C"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
             android:layout_marginTop="8dp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="24~28°C"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/_20sdp" />
 
     </LinearLayout>
 
-
-
-
-
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="#20000000"
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/_15sdp"
+        android:paddingVertical="@dimen/_5sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Menu"
             android:background="@android:color/transparent"
-            android:textStyle="bold"/>
+            android:text="Menu"
+            android:textSize="@dimen/_18sdp" />
 
         <Space
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Setting"
             android:background="@android:color/transparent"
-            android:textStyle="bold"/>
+            android:text="Setting"
+            android:textSize="@dimen/_18sdp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
