--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/_220sdp"
-    android:layout_height="@dimen/_240sdp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/wallpaper">
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#20000000"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/_15sdp"
+        android:paddingVertical="@dimen/_5sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextClock
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:format12Hour="hh:mm a"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/_18ssp" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/networkIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_wifi_high" />
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="0dp" />
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_battery_100" />
+
+        <!--            <iam.thevoid.batteryview.BatteryView-->
+        <!--                android:id="@+id/battery_view"-->
+        <!--                android:layout_width="24dp"-->
+        <!--                android:layout_height="20dp"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                app:bv_borderColor="@android:color/white"-->
+        <!--                app:bv_infillColor="@android:color/white"-->
+        <!--                app:bv_percent="50"/>-->
+
+    </LinearLayout>
 
 
     <LinearLayout
@@ -11,68 +64,18 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.000">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.156">
 
-        <!-- Battery and Network Strength Icons -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#20000000"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/_15sdp"
-            android:paddingVertical="@dimen/_5sdp">
-
-            <TextClock
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:format12Hour="hh:mm a"
-                android:gravity="center"
-                android:textColor="#FFFFFF"
-                android:textSize="@dimen/_18sdp" />
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-            <ImageView
-                android:id="@+id/networkIcon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_wifi_high" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="0dp" />
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_battery_100" />
-
-            <!--            <iam.thevoid.batteryview.BatteryView-->
-            <!--                android:id="@+id/battery_view"-->
-            <!--                android:layout_width="24dp"-->
-            <!--                android:layout_height="20dp"-->
-            <!--                android:layout_gravity="center"-->
-            <!--                app:bv_borderColor="@android:color/white"-->
-            <!--                app:bv_infillColor="@android:color/white"-->
-            <!--                app:bv_percent="50"/>-->
-
-        </LinearLayout>
 
         <!-- Time Display -->
         <TextClock
             android:id="@+id/timeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_30sdp"
             android:format12Hour="hh:mm"
             android:format24Hour="HH:mm:ss"
             android:gravity="center"
@@ -84,22 +87,20 @@
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="2022-06-15 周三"
             android:textColor="#FFFFFF"
-            android:textSize="@dimen/_20sdp" />
+            android:textSize="@dimen/_20ssp" />
 
         <!-- Temperature Display -->
         <TextView
             android:id="@+id/temperatureTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="24~28°C"
             android:textColor="#FFFFFF"
-            android:textSize="@dimen/_20sdp" />
+            android:textSize="@dimen/_20ssp" />
 
     </LinearLayout>
 
@@ -120,7 +121,8 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:text="Menu"
-            android:textSize="@dimen/_18sdp" />
+            android:textSize="@dimen/_18ssp"
+            android:textColor="@color/white"/>
 
         <Space
             android:layout_width="0dp"
@@ -132,7 +134,8 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:text="Setting"
-            android:textSize="@dimen/_18sdp" />
+            android:textSize="@dimen/_18ssp"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
