--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -46,276 +46,25 @@
             android:layout_marginEnd="@dimen/_22sdp"
             android:layout_marginTop="@dimen/_75sdp"
             android:layout_marginBottom="@dimen/_5sdp"
+            app:cardBackgroundColor="@color/black"
             app:strokeColor="#1e1e1e"
             app:strokeWidth="2dp">
 
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/nav_host_fragment"
-                android:name="androidx.navigation.fragment.NavHostFragment"
-                android:layout_width="match_parent"
+            <com.newagedevs.sis_emu.ui.views.DisplayView
+                android:id="@+id/display_view"
                 android:layout_height="match_parent"
-                app:defaultNavHost="true"
-                app:navGraph="@navigation/nav_graph" />
+                android:layout_width="match_parent" />
 
         </com.google.android.material.card.MaterialCardView>
 
-        <LinearLayout
+        <com.newagedevs.sis_emu.ui.views.KeyControlsView
+            android:id="@+id/key_control_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_marginStart="@dimen/_28sdp"
             android:layout_marginEnd="@dimen/_28sdp"
-            android:layout_marginBottom="@dimen/_20sdp"
-            android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_80sdp"
-                android:baselineAligned="false"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_marginVertical="@dimen/_5sdp">
-
-                    <ImageView
-                        android:id="@+id/btn_option"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="3dp"
-                        android:background="@drawable/ic_btn_option"
-                        android:contentDescription="@string/todo"/>
-
-                    <ImageView
-                        android:id="@+id/btn_call"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_call"
-                        android:contentDescription="@string/todo"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/btn_navigation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/ic_btn_navigation"
-                        android:contentDescription="@string/todo"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_marginVertical="@dimen/_5sdp">
-
-                    <ImageView
-                        android:id="@+id/btn_cancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:layout_marginStart="3dp"
-                        android:background="@drawable/ic_btn_back"
-                        android:contentDescription="@string/todo" />
-
-                    <ImageView
-                        android:id="@+id/btn_exit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_exit"
-                        android:contentDescription="@string/todo" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:baselineAligned="false"
-                android:divider="@drawable/divider_transparent"
-                android:orientation="horizontal"
-                android:showDividers="middle">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_marginBottom="@dimen/_10sdp">
-
-                    <ImageView
-                        android:id="@+id/btn_menu"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_menu" />
-
-                    <ImageView
-                        android:id="@+id/btn_settings"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_edit" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="2"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/btn_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_1" />
-
-                    <ImageView
-                        android:id="@+id/btn_4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_4" />
-
-                    <ImageView
-                        android:id="@+id/btn_7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_7" />
-
-                    <ImageView
-                        android:id="@+id/btn_star"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_star" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="2"
-                    android:divider="@drawable/divider_transparent"
-                    android:orientation="vertical"
-                    android:showDividers="middle">
-
-                    <ImageView
-                        android:id="@+id/btn_2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_2" />
-
-                    <ImageView
-                        android:id="@+id/btn_5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_5" />
-
-                    <ImageView
-                        android:id="@+id/btn_8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_8" />
-
-                    <ImageView
-                        android:id="@+id/btn_0"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_0" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="2"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/btn_3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_3" />
-
-                    <ImageView
-                        android:id="@+id/btn_6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_6" />
-
-                    <ImageView
-                        android:id="@+id/btn_9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_9" />
-
-                    <ImageView
-                        android:id="@+id/btn_hash"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_hash" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_marginBottom="@dimen/_10sdp">
-
-                    <ImageView
-                        android:id="@+id/btn_install"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_network" />
-
-                    <ImageView
-                        android:id="@+id/btn_c"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_btn_c" />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
+            android:layout_marginBottom="@dimen/_20sdp" />
 
     </LinearLayout>
 
