--- a/app/src/main/res/layout/view_navigation_bar.xml
+++ b/app/src/main/res/layout/view_navigation_bar.xml
@@ -17,24 +17,18 @@
         android:textColor="@color/white"
         android:textSize="@dimen/_14ssp" />
 
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/btn_nav_action"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginHorizontal="@dimen/_3sdp"
         android:text="Menu"
+        android:textAlignment="center"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="@dimen/_14ssp" />
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/btn_nav_right"
